# rumoca_fixed_wing

./: .gitignore  LICENSE  README.md  pyproject.toml  results.py
.github/workflows/: pages.yml
data/: .gitignore  README.md  sportcub_mocap_4_17_26_train.npz  sportcub_mocap_4_17_26_validation.npz  sportcub_mocap_5_22_26_validation.npz  sportcub_mocap_6_26_26_ground.npz  sportcub_mocap_6_26_26_train.npz  sportcub_mocap_6_26_26_validation.npz
results/: FixedWingPlantGA.mo
site/: README.md  check_site.py  index.html  package-lock.json  package.json  serve.py
site/public/assets/: airplane.glb
site/public/data/: flight_explorer_4_17.json  flight_metrics.json  maneuver_summary.json  manifest.json  method_results.json
site/public/modelica/: CubControl.mo
site/public/wasm/: modelica_language.js  parse_worker.js  rumoca_bind_wasm.js  rumoca_interactive.js  rumoca_worker.js
site/src/: app.js  explorer.js  fixedwing_ga_model.js  modelica_prediction_worker.js  rumoca_flight.js  styles.css
