[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rumoca-fixed-wing"
version = "0.1.0"
description = "Rumoca fixed-wing Modelica browser simulation workbench."
requires-python = ">=3.10"
dependencies = [
  "numpy",
]

[tool.setuptools]
py-modules = [
  "results",
]
